# Custom-heap-memory-manager

./: CMakeLists.txt  README.md  heap.c  heap.h  main.c
